# COMP4300-GameProgramming

./: .gitignore  CMakeLists.txt  README.md  Shapes.txt  backup.md  config.txt  hello.cpp  main.cpp
dev/line_segment_intersection/: LineSegmentIntersection.h  SortingTest.h
engine/: Components.h  Entity.cpp  Entity.h  EntityManager.cpp
engine/Math/: Vec2.h
engine/ecs/: Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
engine/math/: Vec2.cpp
examples/geo_wars/: GeoWarsGame.cpp  GeoWarsGame.h
examples/mario/: MarioGame.cpp  MarioGame.h
